--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -22,7 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Профиль</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'profileuser' %}">Профиль</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Новости</a>
@@ -46,10 +48,7 @@
                     Войти\Зарегистрироваться
                 </button>
             </form>
-            {% endif %}
-
-
-            {% if user.is_authenticated %}
+            {% else %}
             <form method="POST" action="{% url 'logoutuser' %}">
                 {% csrf_token %}
                 <button class="btn btn-outline-danger" type="submit" href="{% url 'logoutuser' %}">
