--- a/templates/forum/signup.html
+++ b/templates/forum/signup.html
@@ -18,26 +18,35 @@ CollectHub
             {{ error }}
         </div>
         {% endif %}
-        <form method="POST">
+        <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
+            <!-- {{ user_form }} -->
+            <!-- {{ user_info_form }} -->
+
             <div class="form-group">
-                <label for="username">Имя пользователя</label>
+                <label for="username">Логин пользователя</label>
                 <input type="text" name="username" class="form-control" id="username" aria-describedby="usernameHelp">
                 <small id="usernameHelp" class="form-text text-muted">Ваше имя пользователя должно быть уникальным. Мы
                     сообщим вам, если кто-то уже взял его.</small>
             </div>
 
-
+            <div class="form-group">
+                <label for="email">Электронная почта</label>
+                <input type="email" name="email" class="form-control" id="email">
+            </div>
+            <br>
             <div class="form-group">
                 <label for="password1">Пароль</label>
                 <input type="password" name="password1" class="form-control" id="password1">
             </div>
+            <br>
             <div class="form-group">
                 <label for="password2">Подтвердить Пароль</label>
                 <input type="password" name="password2" class="form-control" id="password2">
             </div>
             <br>
-
+            <!-- Заполнение дополнительной информации при регистрации  -->
+            
             <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
         </form>
         <hr>
