--- a/templates/profileuser/update_profile.html
+++ b/templates/profileuser/update_profile.html
@@ -7,31 +7,33 @@ CollectHub -- Редактирование Профиля
 
 {% block content%}
 {% load static %}
-<form action="" method="post">
+<form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    <!-- {{ form.as_p }} -->
     <div class="form-group">
         <label for="first_name">Имя:</label>
         <input type="text" name="first_name" class="form-control" id="first_name"
-            value="{% if userinfo.first_name %} {{ userinfo.first_name }} {% else %} {% endif %}">
+            value="{% if userinfo.first_name %}{{ userinfo.first_name }}{% endif %}">
     </div>
     <br>
 
     <div class="form-group">
-        <label for="second_name">Фамилия</label>
-        <input type="text" name="second_name" class="form-control" id="second_name">
+        <label for="last_name">Фамилия</label>
+        <input type="text" name="last_name" class="form-control" id="last_name"
+            value="{% if userinfo.last_name %}{{ userinfo.last_name }}{% endif %}">
     </div>
     <br>
 
     <div class="form-group">
         <label for="town">Ваш город</label>
-        <input type="text" name="town" class="form-control" id="town">
+        <input type="text" name="town" class="form-control" id="town"
+            value="{% if userinfo.town %}{{ userinfo.town }}{% endif %}">
     </div>
     <br>
 
     <div class="form-group">
         <label for="phonenumber">Номер телефона</label>
-        <input type="tel" name="phonenumber" class="form-control" id="phonenumber">
+        <input type="tel" name="phonenumber" class="form-control" id="phonenumber"
+            value="{% if userinfo.phonenumber %}{{ userinfo.phonenumber }}{% endif %}">
     </div>
     <br>
 
