--- a/templates/profileuser/profile.html
+++ b/templates/profileuser/profile.html
@@ -14,7 +14,7 @@ CollectHub -- Профиль
             <div class="col-sm">
                 <div class="container md-10">
                     {% if avatar %}
-                    <img src="{{ avatar }}" alt="" class="image-radius" width="200" height="250">
+                    <img src="{{ avatar.url }}" alt="" class="image-radius" width="200" height="250">
                     {% else %}
                     <img src="{% static 'profileuser\img\no_photo.jpg' %}" alt="" class="image-radius" width="200"
                         height="250">
@@ -53,6 +53,4 @@ CollectHub -- Профиль
     </div>
     <hr>
 </div>
-
-<img src="{{ avatar.url }}" alt="">
 {% endblock %}
