--- a/templates/base.html
+++ b/templates/base.html
@@ -23,12 +23,21 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+                {% if user.is_authenticated %}
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'profileuser' %}">Профиль</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'profileuser' user.id %}">Профиль</a>
                 </li>
+                {% endif %}
+
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'users' %}">Профили</a>
+                </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="#">Новости</a>
                 </li>
+
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
